--- a/job-management-app/client/vercel.json
+++ b/job-management-app/client/vercel.json
@@ -4,25 +4,25 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
+      "config": {
+        "distDir": "build",
+        "buildCommand": "npm run build"
+      }
     }
   ],
   "routes": [
+    { "handle": "filesystem" },
     {
       "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "continue": true
     },
-    {
-      "src": "/favicon.ico",
-      "dest": "/favicon.ico"
-    },
-    {
-      "src": "/manifest.json",
-      "dest": "/manifest.json"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+    { "src": "/[^.]+", "dest": "/index.html" }
+  ],
+  "env": {
+    "CI": "false"
+  }
+}
     }
   ]
 }
