--- a/job-management-app/client/package.json
+++ b/job-management-app/client/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "build": "DISABLE_ESLINT_PLUGIN=true CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,6 +40,25 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "vercel": {
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "build"
+        }
+      }
+    ],
+    "routes": [
+      { "handle": "filesystem" },
+      {
+        "src": "/static/(.*)",
+        "headers": { "cache-control": "public, max-age=31536000, immutable" }
+      },
+      { "src": "/[^.]+", "dest": "/index.html" }
     ]
   }
 }
