--- a/job-management-app/server/package.json
+++ b/job-management-app/server/package.json
@@ -6,7 +6,7 @@
     "start": "ts-node src/app.ts",
     "dev": "nodemon src/app.ts",
     "build": "tsc",
-    "vercel-build": "echo hello"
+    "vercel-build": "tsc"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -32,15 +32,16 @@
     "version": 2,
     "builds": [
       {
-        "src": "src/app.ts",
+        "src": "dist/app.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "src/app.ts"
+        "dest": "dist/app.js"
       }
-    ]
+    ],
+    "outputDirectory": "dist"
   }
 }
