Add rootDirectory to Vercel configuration in package.json

--- a/job-management-app/server/package.json
+++ b/job-management-app/server/package.json
@@ -42,6 +42,7 @@
         "dest": "dist/app.js"
       }
     ],
-    "outputDirectory": "dist"
+    "outputDirectory": "dist",
+    "rootDirectory": "server"
   }
 }
