--- a/job-management-app/server/package.json
+++ b/job-management-app/server/package.json
@@ -3,24 +3,22 @@
   "version": "1.0.0",
   "main": "dist/app.js",
   "scripts": {
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
     "build": "tsc",
-    "vercel-build": "tsc"
+    "start": "node dist/app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.13.8"
+    "express": "^4.17.1",
+    "mongoose": "^6.0.0",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.23",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^16.18.126",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.0.0",
+    "@types/jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.12",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
