--- a/job-management-app/client/package.json
+++ b/job-management-app/client/package.json
@@ -14,7 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -53,12 +53,19 @@
       }
     ],
     "routes": [
-      { "handle": "filesystem" },
+      {
+        "handle": "filesystem"
+      },
       {
         "src": "/static/(.*)",
-        "headers": { "cache-control": "public, max-age=31536000, immutable" }
+        "headers": {
+          "cache-control": "public, max-age=31536000, immutable"
+        }
       },
-      { "src": "/[^.]+", "dest": "/index.html" }
+      {
+        "src": "/[^.]+",
+        "dest": "/index.html"
+      }
     ]
   }
 }
