--- a/job-management-app/server/package.json
+++ b/job-management-app/server/package.json
@@ -4,7 +4,8 @@
   "main": "dist/app.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "dev": "nodemon dist/app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -20,7 +21,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^16.18.126",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.22",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   },
