--- a/job-management-app/server/package.json
+++ b/job-management-app/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/app.js",
   "scripts": {
-    "build": "tsc",
+    "build": "echo 'No build step needed for JS'",
     "start": "node dist/app.js",
     "dev": "nodemon dist/app.js"
   },
