--- a/job-management-app/server/package.json
+++ b/job-management-app/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "echo 'No build step needed for JS'",
     "start": "node dist/app.js",
-    "dev": "nodemon dist/app.js"
+    "dev": "node dist/app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
